...
            })
            .padding()
//            .alert(isPresented: $showAlert, content: {
//                Alert(
//                    title: Text("Alert"),
//                    message: Text("Message"),
//                    dismissButton: .default(Text("OK"))
//                )
//
//                Alert(
//                    title: Text("Alert"),
//                    message: Text("Message"),
//                    primaryButton: .destructive(
...
